<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.61" />


        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map2"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.164" />

        <EditText
            android:id="@+id/runtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/yourrun"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/map2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/runstarttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12:00"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.066"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map2"
            app:layout_constraintVertical_bias="0.108" />


        <TextView
            android:id="@+id/runlength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="56 minutes"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.882"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map2"
            app:layout_constraintVertical_bias="0.108" />

        <TextView
            android:id="@+id/rundistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.00 mi"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map2"
            app:layout_constraintVertical_bias="0.093" />

        <TextView
            android:id="@+id/runavespeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="2 mph"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rundistance" />

        <TextView
            android:id="@+id/runcalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:text="100 calories"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rundistance" />

        <TextView
            android:id="@+id/runweather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/weather"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/runnotes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.138"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/runweather"
            app:layout_constraintTop_toBottomOf="@+id/runcalories" />

        <TextView
            android:id="@+id/runnotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:text="@string/notes"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.138"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/runcalories" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toEndOf="@+id/runnotes"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <TextView
            android:id="@+id/runrating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:layout_marginBottom="120dp"
            android:text="@string/rating"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.138"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/runstarttime"
            app:layout_constraintVertical_bias="0.0" />

        <RadioGroup
            android:id="@+id/ratinggroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checkedButton="@id/radioThree"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/runrating"
            app:layout_constraintTop_toBottomOf="@+id/runnotes"
            app:layout_constraintVertical_bias="0.100000024">

            <RadioButton
                android:id="@+id/radioOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one" />

            <RadioButton
                android:id="@+id/radioTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two" />

            <RadioButton
                android:id="@+id/radioThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three" />

            <RadioButton
                android:id="@+id/radioFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/four" />

            <RadioButton
                android:id="@+id/radioFive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/five" />
        </RadioGroup>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="16dp"
            android:onClick="onClickDone"
            android:text="@string/closebtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/runnotes"
            app:layout_constraintVertical_bias="0.18" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>